--- a/index.html
+++ b/index.html
@@ -9,13 +9,33 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- font family -->
+    <script src="https://kit.fontawesome.com/37c17db0f2.js" crossorigin="anonymous"></script>
 
 </head>
 
 <body>
     <!-- Seat Booking Section Starts -->
-    <section class="bg-white px-8 py-5 w-11/12 mx-auto rounded-2xl">
+    <section class="bg-white px-8 py-5 w-11/12 mx-auto rounded-2xl shadow-sm grid grid-cols-3 gap-5">
 
+        <div class="col-span-2">
+            <div>
+                <h2 class="text-2xl font-semibold">Select Your Seat</h2>
+            </div>
+            <div class="border-b-2 border-dashed my-4"></div>
+            <div class="flex justify-between">
+                <div>
+                    <i class="fa-solid fa-couch"></i>
+                    <span>Available</span>
+                </div>
+                <div>
+                    <i class="fa-solid fa-couch"></i>
+                    <span class="text-green-500">Selected</span>
+                </div>
+                
+            </div>
+            <div class="border-b-2 border-dashed my-4"></div>
+        </div>
+        <div class="bg-green-400">input section</div>
 
     </section>
     <!-- Seat Booking Section Ends -->
