Finished Seats Section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h2 class="text-2xl font-semibold">Select Your Seat</h2>
             </div>
             <div class="border-b-2 border-dashed my-4"></div>
-            <div class="flex justify-between">
+            <div class="flex justify-between items-center">
                 <div>
                     <i class="fa-solid fa-couch"></i>
                     <span>Available</span>
@@ -31,11 +31,165 @@
                     <i class="fa-solid fa-couch"></i>
                     <span class="text-green-500">Selected</span>
                 </div>
-                
+
             </div>
             <div class="border-b-2 border-dashed my-4"></div>
+
+            <!--------------------------------------- Seats Section Begins Here ---------------------->
+
+            <section class="grid grid-cols-12 items-center gap-y-5 mr-10 ">
+                <!-- front seat -->
+                <div class="col-span-1">
+                </div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <div class="col-span-8"></div>
+                    <button class="btn col-span-2">
+                        <img src="images/steering-wheel.png" style="padding: 10px;" alt="">
+                    </button>
+                </div>
+                <!-- row 1 -->
+                <div class="col-span-1">A</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">A1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">A2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">A3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">A4</button>
+                </div>
+                <!-- row 2 -->
+                <div class="col-span-1">B</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">B1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">B2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">B3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">B4</button>
+                </div>
+                <!-- row 3 -->
+                <div class="col-span-1">C</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">C1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">C2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">C3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">C4</button>
+                </div>
+                <!-- row 4 -->
+                <div class="col-span-1">D</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">D1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">D2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">D3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">D4</button>
+                </div>
+                <!-- row 5 -->
+                <div class="col-span-1">E</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">E1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">E2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">E3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">E4</button>
+                </div>
+                <!-- row 6 -->
+                <div class="col-span-1">F</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">F1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">F2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">F3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">F4</button>
+                </div>
+                <!-- row 7 -->
+                <div class="col-span-1">G</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">G1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">G2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">G3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">G4</button>
+                </div>
+                <!-- row 8 -->
+                <div class="col-span-1">H</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">H1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">H2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">H3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">H4</button>
+                </div>
+                <!-- row 9 -->
+                <div class="col-span-1">I</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">I1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">I2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">I3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">I4</button>
+                </div>
+                <!-- row 10 -->
+                <div class="col-span-1">J</div>
+                <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">J1</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">J2</button>
+                    <div class="col-span-2"></div>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">J3</button>
+                    <button
+                        class="col-span-2 btn btn-md hover:bg-black hover:text-white transition-colors duration-200 ease-in-out">J4</button>
+                </div>
+
+
+            </section>
         </div>
         <div class="bg-green-400">input section</div>
+
+        <!-- Seat Booking section Starts -->
+
+
+
+
+
+
 
     </section>
     <!-- Seat Booking Section Ends -->
