increase & decrease seat count

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -46,7 +46,10 @@
                 <div class="col-span-11 grid grid-cols-10 gap-16 items-center text-center">
                     <div class="col-span-8"></div>
                     <button class="btn col-span-2">
-                        <img src="images/steering-wheel.png" style="padding: 10px;" alt="">
+
+                        <img src="images/steering-wheel.png" style="max-width: 30%;" alt="">
+
+
                     </button>
                 </div>
                 <!-- row 1 -->
@@ -196,7 +199,7 @@
                     <div class="flex justify-between">
                         <div class="flex">
                             <span>Seat</span>
-                            <span
+                            <span id="total-booked"
                                 class="bg-green-500 w-5 h-4 p-2 text-white flex rounded-full text-sm justify-center items-center">0</span>
                         </div>
                         <span>Class</span>
