--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                         <p>Grand Price</p>
                         <p>
                             <span>Bdt:</span>
-                            <span>****</span>
+                            <span id="grand-total">****</span>
                         </p>
                     </div>
 
