Finished coupon discount show section

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                         </p>
                     </div>
                     <div class="border-b-2 border-dashed my-4"></div>
-                    <div
+                    <div id="coupon-container"
                         class="flex items-center gap-2 border-y-2 py-2 my-2 border-dashed text-lg font-semibold justify-between">
                         <input id="coupon" disabled class="input my-5 w-full input-primary border-primary" type="text"
                             placeholder="Have a coupon?">
